# grouped_stratified_split

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/priority_group_stratified_split/: __init__.py  get_split.py  greedy_split.py  group_set.py  groups.py  priority_split.py  pyproject.toml  split.py
src/priority_group_stratified_split/tests/: get_split_test.py  group_test.py
tests/: test_get_split.py  test_greedy_split.py  test_group.py  test_priority_split.py
