[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

# [project]
# name = "priority_group_stratified_split"
# version = "0.0.1"
# authors = [
#     {name="João Pedro Medrado Sena", email="joaopedromsena@gmail.com" },
#     {name="Felipe Ferreira Marra", email="felipeferreiramarra@gmail.com" },
# ]
# description = "Priority Group Stratified Split"
# readme = "README.md"
# requires-python = ">=3.8"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

# [project.urls]
# Homepage = "https://github.com/jpmedras/priority_group_stratified_split"
# Issues = "https://github.com/jpmedras/priority_group_stratified_split/issues"